[gd_scene load_steps=7 format=3 uid="uid://b8j3n4m5k6p7q8r9"]

[ext_resource type="PackedScene" uid="uid://djy5m8n3k2qwp" path="res://scenes/world/cave_world.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="2"]
[ext_resource type="Script" path="res://scripts/player_input.gd" id="3"]
[ext_resource type="Script" path="res://scripts/ui/game_ui.gd" id="4"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 20
font_color = Color(0, 1, 1, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 14
font_color = Color(0.7, 0.7, 0.7, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]

[node name="CaveWorld" parent="." instance=ExtResource("1")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)
script = ExtResource("2")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4")

[node name="ResourceDisplay" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 80.0

[node name="NutrientLabel" type="Label" parent="CanvasLayer/UI/ResourceDisplay"]
layout_mode = 2
text = "Nutrients: 0"
label_settings = SubResource("LabelSettings_1")

[node name="HelpLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 400.0
offset_bottom = 150.0
text = "LEFT CLICK: Place Mycelium (10 nutrients)
R: Regenerate Cave
WASD: Move Camera"
label_settings = SubResource("LabelSettings_2")

[editable path="CaveWorld"]
